mlaas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: project25
    appgw.ingress.kubernetes.io/request-timeout: "240"
    kubernetes.io/ingress.class: azure/application-gateway   
  labels:
    app: mlaas-ingress 
  name: mlaas-ingress
  namespace: default
  spec:
  rules:
  - host: project25.life
    http:
      paths:
      - backend:
          service:
            name: my-app-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: mlaas-push-api
            port:
              number: 80 

              spec:
  rules:
  - host: appbackend.bue.edu.ar
    http:
      paths:
      - backend:
          service:
            name: appbackend
            port:
              number: 8000
        path: /*
        pathType: ImplementationSpecific
